[tool.poetry]
name = "merge-pdf"
version = "0.1.0"
description = ""
authors = ["JunioResende <junioresende23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
taskipy = "^1.13.0"

[tool.pytest.ini_options]
pythonpath = "tests"
addopts = '-p no:warnings'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.taskipy.tasks]
merge_pdf = 'python src/main.py'
pre_test = 'task lint'
test = 'pytest --cov=src -vv'
post_test = 'coverage html'
lint = 'ruff check . ; ruff check . --diff'
format = 'ruff check . --fix ; ruff format .'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
